--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/ProjetosPessoais/Paraiso dos Focinhos/img/slide-home-1.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/slide-home-1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/ProjetosPessoais/Paraiso dos Focinhos/img/slide-home-2.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/slide-home-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/ProjetosPessoais/Paraiso dos Focinhos/img/slide-home-3.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/slide-home-3.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/ProjetosPessoais/Paraiso dos Focinhos/img/slide-home-4.jpg" class="d-block w-100" alt="...">
+            <img src="./src/img/slide-home-4.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
